TASQ-253: Fix adding linked tasks wrapping already existing linked tasks General fixes in task detail view + stylink of code

--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -160,6 +160,9 @@ table.togglerContent {
 .left-margin {
 	padding-left: 20px;
 }
+.marginleft_0{
+	margin-left: 0px;
+}
 
 .table_state {
 	margin: 10px;
